src/styles/main.less
*,
*:after,
*:before {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

html {
  font-family: sans-serif;
}

body,
html {
  height: 100%;
}

body {
  padding: 20px;
}

a {
  color: #333;
  text-decoration: none;
}

#loading {
  z-index: 1000;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.8);
}

#header {
  padding-top: 0;
  padding-bottom: 0;

  #title {
    text-align: left;
    font-size: 15px;

    a {
      color: #000;
    }

    .icon-cog {
      cursor: pointer;
      vertical-align: middle;
      display: inline-block;
      margin-left: 5px;
      padding-bottom: 3px;
      color: #333;

      &.active {
        color: #000;
      }
    }
  }

  #options {
    position: absolute;
    display: none;
    margin-left: -18px;
    top: 25px;
    padding: 10px 20px;
    z-index: 1000;
    background-color: rgba(255, 255, 255, 1);
    border: #c3c3c3 1px solid;

    h6 {
      padding: 0;
      border-bottom: 1px solid;
      padding-bottom: 2px;
      margin-top: 10px;
      margin-bottom: 10px;
    }

    .option, .info {
      padding: 5px 0;
    }

    .info {
      font-size: 13px;
    }

    &.visible {
      display: inline-block;
    }

    input[type="text"] {
      width: 100%;
      outline: none;
    }
  }

  #github {
    text-align: right;
    font-size: 13px;
  }

  #ghlogo {
    vertical-align: bottom;
    display: inline-block;
    padding-bottom: 1px;
    height: 16px;
  }
}

#playground {
  height: 100%;
  padding-bottom: 0;

  .editor-container {
    height: 90%;

    .editor {
      height: 100%;
      border: 1px solid #eee;
    }

    .editor-footer {
      display: inline-block;
      position: absolute;
      z-index: 10;
      left: 1px;
      bottom: 1px;
      text-align: center;
      right: 21px;
      height: 25px;
      line-height: 1.7;
      font-size: 15px;
    }
  }

  #run-code {
    cursor: pointer;
    background-color: rgba(241, 241, 241, 1);
    color: #333;
  }

  #processing {
    display: none;
    position: absolute;
    z-index: 500;
    top: 1px;
    right: 15px;
    bottom: 1px;
    left: 1px;

    .spinner {
      width: 15px;
      height: 15px;
      position: absolute;
      top: 22px;
      left: 22px;
    }
  }
}

#console {
  padding-bottom: 0;

  #console-heading {
    border: 1px solid #eee;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 20px;
    border-bottom: none;
    font-size: 15px;
  }

  #console-content {
    border: 1px solid #eee;
    padding-bottom: 20px;

    .log-log {
      color: rgb(51, 51, 51);
    }

    .log-info {
      color: rgb(33, 83, 164);
    }

    .log-warn {
      color: rgb(240, 173, 78);
    }

    .log-error {
      color: rgb(217, 83, 79);
    }

    .log-error {
      color: rgb(217, 83, 79);
    }
  }

  .console {
    min-height: 100px;
    max-height: 200px;
    overflow-y: scroll;
    overflow-x: auto;
    white-space: pre;
    font-family: Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', Courier, monospace;
    line-height: 1.7;
    font-size: 13px;
    padding-left: 40px;
    padding-top: 20px;

    [class*=" icon-"],
    [class^="icon-"] {
      display: inline-block;
      margin-right: 10px;
      vertical-align: middle;
      padding-bottom: 1px;
      width: 1em;
    }
  }
}

